--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Text to Speech</title>
 </head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+<script src="annyang.js"></script>
 <script src="speech.js"></script>
 <script src="tts.js"></script>
 </body>
